Update application/src/main/java/org/opentripplanner/netex/mapping/calendar/DayTypeAssignmentMapper.java
Co-authored-by: Thomas Gran <t2gran@gmail.com>